<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
	<string name="about">About</string>
	<string name="admission_year">Admission Year</string>
	<string name="allow_location_mocking">Allow location mocking.</string>
	<string name="allow_record_editing">Allow record editing.</string>
	<string name="allowed_date">Allowed Date</string>
	<string name="allowed_time">Allowed Time</string>
	<string name="app_name">Green Dragonfly</string>
	<string name="average" translatable="false">AVG</string>
	<string name="back">Back</string>
	<string name="bind">Bind</string>
	<string name="bind_account">Bind Account</string>
	<string name="cancel">Cancel</string>
	<string name="class_id">Class</string>
	<string name="close">Close</string>
	<string name="confirm">Confirm</string>
	<string name="copy_record">Copy Record</string>
	<string name="debug_options">Debug Options</string>
	<string name="delete">Delete</string>
	<string name="distance_template"><xliff:g>%1$.2f</xliff:g> m</string>
	<string name="edit">Edit</string>
	<string name="edit_record">Edit Record</string>
	<string name="enable_location_logging">Enable location logging.</string>
	<string name="error">Error</string>
	<string name="error_bind">Error occurred when binding to the account: %1$s. Make sure you\'re connected to the campus network.</string>
	<string name="error_get_schools">Error occurred when retrieving the school list: %1$s</string>
	<string name="error_get_user">Error occurred when retrieving user information: %1$s</string>
	<string name="error_query_count">Error occurred when querying uploaded record count: %1$s. Make sure you\'re connected to the campus network.</string>
	<string name="error_upload">Error occurred when trying to upload the record: %1$s. Make sure you\'re connected to the campus network.</string>
	<string name="female">Female</string>
	<string name="gender">Gender</string>
	<string name="location_permission_denied">Please allow access to location services which is required for recording your running.</string>
	<string name="male">Male</string>
	<string name="max_times_per_day">Max Times per Day</string>
	<string name="min_distance">Min Distance (m)</string>
	<string name="name">Name</string>
	<string name="update_available_message">A new version <xliff:g>%1$s</xliff:g> has been released. Click here to download.</string>
	<string name="update_available_title">Update Available</string>
	<string name="next">Next</string>
	<string name="now" translatable="false">NOW</string>
	<string name="ok">OK</string>
	<string name="password">Password</string>
	<string name="query_count">Query count</string>
	<string name="query_count_message">You have uploaded <xliff:g>%1$d</xliff:g> records.</string>
	<string name="query_count_title">Query Count</string>
	<string name="range_template">%1$s to %2$s</string>
	<string name="rebind">Rebind</string>
	<string name="recording_channel_desc">The notification shown when you\'re recording your running status.</string>
	<string name="recording_channel_name">Recording Service</string>
	<string name="recording_notification_content">Current speed: <xliff:g>%1$.2f</xliff:g> m/s\nAverage speed: <xliff:g>%2$.2f</xliff:g> m/s\nElapsed time: <xliff:g>%3$s</xliff:g>\nDistance: <xliff:g>%4$.2f</xliff:g> m</string>
	<string name="recording_notification_title">Recording</string>
	<string name="records">Records</string>
	<string name="retry">Retry</string>
	<string name="school">School</string>
	<string name="school_not_selected">Please select your school.</string>
	<string name="select_school">Select school</string>
	<string name="speed_range">Speed Range (m/s)</string>
	<string name="speed_template"><xliff:g>%1$.2f</xliff:g> m/s</string>
	<string name="start_date">Start date</string>
	<string name="start_time">Start time</string>
	<string name="status_conflict">Max times per day reached</string>
	<string name="status_date_invalid">Not on allowed date</string>
	<string name="status_distance_invalid">Distance requirement not met</string>
	<string name="status_speed_invalid">Speed requirement not met</string>
	<string name="status_time_invalid">Not in allowed time</string>
	<string name="status_pending">Not uploaded</string>
	<string name="status_uploaded">Uploaded</string>
	<string name="student_id">Student ID</string>
	<string name="update_channel_name">Update Notification</string>
	<string name="upload">Upload</string>
	<string name="uploaded">Uploaded</string>
	<string name="upload_failed">Upload failed</string>
	<string name="upload_result">Upload Result</string>
	<string name="upload_succeeded">Upload succeeded</string>
	<string name="user">User</string>
	<string name="version_template">Version: %1$s</string>
	<string name="waiting_location">Waiting for location data</string>
	<string name="warn_invalid_date">Today is not an allowed date. Do you want to start anyway?</string>
	<string name="warn_invalid_time">It is not in allowed time now. Do you want to start anyway?</string>
	<string name="warn_no_location">No location data has been received so nothing will be recorded. Do you want to finish anyway?</string>
	<string name="warn_not_in_range">You haven\'t met the exercising requirements yet. Do you want to finish anyway?</string>
	<string name="warning">Warning</string>
</resources>
