<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:paddingStart="@dimen/padding_large"
	android:paddingEnd="@dimen/padding_large"
	android:paddingTop="@dimen/padding_medium"
	android:orientation="vertical"
	tools:context=".RecordEditorFragment">
	<androidx.constraintlayout.widget.ConstraintLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_margin="@dimen/margin_small">
		<LinearLayout
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:orientation="vertical"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toTopOf="parent"
			app:layout_constraintBottom_toBottomOf="parent">
			<com.google.android.material.textview.MaterialTextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:textStyle="bold"
				android:text="@string/start_date" />
			<com.google.android.material.textview.MaterialTextView
				android:id="@+id/text_start_date"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content" />
		</LinearLayout>
		<ImageButton
			android:id="@+id/button_edit_date"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:background="?attr/selectableItemBackgroundBorderless"
			android:src="@drawable/ic_edit"
			android:contentDescription="@string/edit"
			app:tint="?android:attr/textColorPrimary"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintTop_toTopOf="parent"
			app:layout_constraintBottom_toBottomOf="parent" />
	</androidx.constraintlayout.widget.ConstraintLayout>
	<androidx.constraintlayout.widget.ConstraintLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_margin="@dimen/margin_small">
		<LinearLayout
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:orientation="vertical"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toTopOf="parent">
			<com.google.android.material.textview.MaterialTextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:textStyle="bold"
				android:text="@string/start_time" />
			<com.google.android.material.textview.MaterialTextView
				android:id="@+id/text_start_time"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content" />
		</LinearLayout>
		<ImageButton
			android:id="@+id/button_edit_time"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:background="?attr/selectableItemBackgroundBorderless"
			android:src="@drawable/ic_edit"
			android:contentDescription="@string/edit"
			app:tint="?android:attr/textColorPrimary"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintTop_toTopOf="parent"
			app:layout_constraintBottom_toBottomOf="parent" />
	</androidx.constraintlayout.widget.ConstraintLayout>
	<com.google.android.material.checkbox.MaterialCheckBox
		android:id="@+id/checkbox_uploaded"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/uploaded" />
	<com.google.android.material.button.MaterialButton
		android:id="@+id/button_copy_record"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/copy_record"
		style="@style/Widget.MaterialComponents.Button.OutlinedButton" />
</LinearLayout>
