<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:layout_height="match_parent"
	android:layout_width="match_parent"
	android:padding="@dimen/padding_large"
	tools:context=".BindLoginFragment">
	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="vertical">
		<com.google.android.material.textfield.TextInputLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_margin="@dimen/margin_small"
			android:hint="@string/select_school"
			android:labelFor="@+id/dropdown_schools"
			style="@style/AppTheme.UnderlineBox.ExposedDropdownMenu">
			<AutoCompleteTextView
				android:id="@+id/dropdown_schools"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:focusable="false"
				android:textIsSelectable="false" />
		</com.google.android.material.textfield.TextInputLayout>
		<com.google.android.material.textfield.TextInputLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_margin="@dimen/margin_small">
			<com.google.android.material.textfield.TextInputEditText
				android:id="@+id/input_student_id"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:hint="@string/student_id"
				android:inputType="number"
				android:autofillHints="username"
				tools:targetApi="o" />
		</com.google.android.material.textfield.TextInputLayout>
		<com.google.android.material.textfield.TextInputLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			app:endIconMode="password_toggle"
			android:layout_margin="@dimen/margin_small">
			<com.google.android.material.textfield.TextInputEditText
				android:id="@+id/input_password"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:hint="@string/password"
				android:inputType="textPassword"
				android:autofillHints="password"
				tools:targetApi="o" />
		</com.google.android.material.textfield.TextInputLayout>
	</LinearLayout>
</ScrollView>
