<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	tools:context=".BindActivity">
	<com.google.android.material.appbar.AppBarLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:theme="@style/AppTheme.AppBarOverlay">
		<com.google.android.material.appbar.MaterialToolbar
			android:id="@+id/toolbar"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			app:layout_scrollFlags="enterAlways" />
	</com.google.android.material.appbar.AppBarLayout>
	<androidx.constraintlayout.widget.ConstraintLayout
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		app:layout_behavior="@string/appbar_scrolling_view_behavior">
		<me.zhanghai.android.materialprogressbar.MaterialProgressBar
			android:id="@+id/progress_bind"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toTopOf="parent"
			app:mpb_progressStyle="horizontal"
			app:mpb_showProgressBackground="false"
			app:mpb_useIntrinsicPadding="false"
			app:mpb_indeterminateTint="@color/progressBar"
			style="@style/AppTheme.ProgressBar" />
		<androidx.coordinatorlayout.widget.CoordinatorLayout
			android:layout_width="match_parent"
			android:layout_height="0dp"
			app:layout_constraintTop_toBottomOf="@id/progress_bind"
			app:layout_constraintBottom_toTopOf="@id/layout_buttons">
			<org.ddosolitary.greendragonfly.FixedViewPager
				android:id="@+id/pager_bind"
				android:layout_width="match_parent"
				android:layout_height="match_parent" />
		</androidx.coordinatorlayout.widget.CoordinatorLayout>
		<androidx.constraintlayout.widget.ConstraintLayout
			android:id="@+id/layout_buttons"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:paddingStart="@dimen/padding_small"
			android:paddingEnd="@dimen/padding_small"
			android:background="@color/bottomBarBackground"
			app:layout_constraintBottom_toBottomOf="parent">
			<com.google.android.material.button.MaterialButton
				android:id="@+id/button_cancel"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/cancel"
				android:onClick="onCancelClicked"
				app:layout_constraintTop_toTopOf="parent"
				app:layout_constraintStart_toStartOf="parent"
				style="@style/Widget.MaterialComponents.Button.TextButton" />
			<com.google.android.material.button.MaterialButton
				android:id="@+id/button_next"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/next"
				android:onClick="onNextClicked"
				app:layout_constraintTop_toTopOf="parent"
				app:layout_constraintEnd_toEndOf="parent"
				style="@style/Widget.MaterialComponents.Button.TextButton" />
			<com.google.android.material.button.MaterialButton
				android:id="@+id/button_back"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/back"
				android:visibility="gone"
				android:onClick="onBackClicked"
				app:layout_constraintTop_toTopOf="parent"
				app:layout_constraintStart_toStartOf="parent"
				style="@style/Widget.MaterialComponents.Button.TextButton" />
			<com.google.android.material.button.MaterialButton
				android:id="@+id/button_bind"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/bind"
				android:visibility="gone"
				android:onClick="onBindClicked"
				app:layout_constraintTop_toTopOf="parent"
				app:layout_constraintEnd_toEndOf="parent"
				style="@style/Widget.MaterialComponents.Button.TextButton" />
		</androidx.constraintlayout.widget.ConstraintLayout>
	</androidx.constraintlayout.widget.ConstraintLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>
